--- a/src/components/RegisterScreen/RegisterScreen.scss
+++ b/src/components/RegisterScreen/RegisterScreen.scss
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: darkcyan;
+    background-color: var(--light-bg-color);
 
     .login {
         width: 500px;
@@ -13,8 +13,54 @@
         background-color: white;
         border-radius: 20px;
 
+        h2 {
+            padding-left: 10px;
+        }
+
         .red {
             color: red;
+        }
+
+        .registrarme-btn {
+            text-align: center;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+
+            
+            .btn-primary {
+                color:black;
+                border-color: black;
+                background-color: var(--main-bg-color);
+                margin: 5px;
+                align-self: center;
+                font-weight: bold;
+
+                &:hover {
+                    background-color: green;
+                }
+            }
+
+            .btn-registrado {
+                background-color: white;
+
+                &:hover {
+                    background-color: var(green);
+                }
+            }
+
+            .btn-ingresar-google {
+                display: flex;
+                flex-direction: row;
+                background-color: white;
+
+                .logo-google {
+                    width: 35px;
+                    height: 25px;
+                    margin-right: 5px;
+                } 
+            }
         }
     }
 }
