se corrige el boton de logout y se agregan variantes para el checkout

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -78,7 +78,7 @@
         padding-right: 30px;
         padding-bottom: 10px;
 
-        a { 
+        p { 
             &:hover {
                 color: white;
                 cursor: pointer;
